# emoguard_project

./: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  README.md  TODO.MD  docker-compose-usage.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  todo.md  宿主机.conf  部署上线指南.md  隐私政策.md
.github/workflows/: composedeploy.yml  deploy.yml
.qoder/quests/: rewrite-plan-suggestion.md
apps/articles/: admin.py  apps.py  models.py  serializers.py  views.py
apps/cognitive_flow/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  views.py
apps/common/: ADMIN_REFACTOR_GUIDE.md  REFACTOR_EXAMPLES.md  admin_base.py  resource_configs.py
apps/emotiontracker/: admin.py  apps.py  models.py  serializers.py  views.py
apps/feedback/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
apps/journals/: admin.py  apps.py  models.py  serializers.py  views.py
apps/notice/: __init__.py  admin.py  apps.py  celery.py  models.py  serializers.py  services.py  (+2 more)
config/: api.py  auth.py  health.py  jwt_auth_adapter.py  schemas.py  settings.py  settings_improved.py  settings_test.py  token_views.py  urls.py
doc/: MIGRATION_GUIDE.md  QUICK_START.md  TODO.md  assessment_code_review.md  mp-todo.md  openapi.json  上线前分点需求与原因待办清单.md  开发计划.md  智能测评迁移与重构说明.md
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json
nginx/: default.conf
nginx_build/: Dockerfile  default.conf
scripts/: clean_migrations.py  quick_reset.bat  quick_reset.sh
(+260 files in other folders)
