[project]
name = "emoguard-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deadcode>=2.4.1",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-import-export[xlsx]>=4.3.13",
    "django-ninja>=1.4.5",
    "django-ninja-extra>=0.30.2",
    "django-ninja-jwt>=5.4.0",
    "django-summernote>=0.8.20.0",
    "djangorestframework>=3.16.1",
    "dj-database-url>=2.1.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.11",
    "pycryptodome",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.3",
    "uvicorn>=0.38.0",
    "celery>=5.5.3",
    "django-celery-beat>=2.8.1",
    "redis>=7.1.0",
    "openpyxl>=3.1.5",
]

[tool.deadcode]
exclude = [".venv", "venv", "__pycache__", "*.pyc", "migrations"]
ignore-names = ["*TestCase", "*Mixin", "test_*"]
